--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1>Welcome To My Website!!!</h1>
 <p>I'm sooooooo hungry</p>
-<img src="https://ih1.redbubble.net/image.4135127957.9036/st,small,507x507-pad,600x600,f8f8f8.jpg">
+<img src="https://ih1.redbubble.net/image.4135127957.9036/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="Lisa Frank Bat">
+<a href="https://lisafrank.com/">Lisa Frank Website</a>
