--- a/inspire.html
+++ b/inspire.html
@@ -6,4 +6,6 @@
   
   <body>
     <h1>Natalie Portman</h1>
+    <img src="https://images.mubicdn.net/images/cast_member/3138/cache-488404-1615052280/image-w856.jpg" alt="Natalie Portman picture">
+    <body>Natalie Portman is an American actress who has an inspiring career and life.</body>
     
