--- a/inspire.html
+++ b/inspire.html
@@ -7,5 +7,6 @@
   <body>
     <h1>Natalie Portman</h1>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQe9O9Oyih5URMQaO6rzsf6b5JVvSl9WSlOj_fYPzApXnslbIvKQF07LM-GNE_wfvzIU5s&usqp=CAU" alt="Natalie Portman picture">
-    <body>Natalie Portman is an American actress who has an inspiring career and life.</body>
+    
+    <body>Natalie Portman is an American actress who has an inspiring career and life. She appeared in her first film, <em>Leon: The Professional</em>, at age 12 and has since appeared in 52 films.</body>
     
