--- a/inspire.html
+++ b/inspire.html
@@ -6,7 +6,7 @@
   
   <body>
     <h1>Natalie Portman</h1>
-    <img src="http://images4.fanpop.com/image/photos/15500000/Posing-for-portraits-during-the-2010-TIFF-in-Guess-Portrait-Studio-at-Regency-Hotel-natalie-portman-15557271-1964-2560.jpg" alt="Natalie Portman picture">
+    <img src="http://i.imgur.com/JJmmSD5.jpg" alt="Natalie Portman picture">
     <p>Natalie Portman is an American actress who has an inspiring career and life. She appeared in her first film, <em>Leon: The Professional</em>, at age 12 and has since appeared in 52 films.
       She is best known for <em>Black Swan</em>, where she trained as a ballet dancer for one year for the role and paid for the training out of her own pocket. She won an Academy Award for Best Actress due to her impressive acting and commitment to the film.
     Natalie Portman has also attended Harvard University and has graduated with a bachelor's degree in psychology. She has two children, and is very active in the women's rights movement.
