--- a/template.html
+++ b/template.html
@@ -3,11 +3,15 @@
     <meta charset="UTF-8">
     <title>Template</title>
     <style>
-      color: green
+      h1
+      {
+      color: green;
+      }
     </style>
+    
+   <h1>Page Title</h1>
+    
   </head>
-  <body>
-    <h1>Page Title</h1>
-  </body>
+  <body>template body</body>
 </html>
 
