--- a/amuse.html
+++ b/amuse.html
@@ -1,1 +1,19 @@
-fgfdgdfdf
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Amuse</title>
+    <style>
+      h1
+      {
+      color: green;
+      }
+    </style>
+    
+   <h1>A24</h1>
+    
+  </head>
+  <body>I love the A24 website because it keeps me up to date on my favorite movies. The website is also easy to navigate and has a modern look.
+  <p><a href= “https://a24films.com/”>A24 Films</a>
+  </body>
+
+</html>
