--- a/amuse.html
+++ b/amuse.html
@@ -15,5 +15,20 @@
   <body>I love the A24 website because it keeps me up to date on my favorite movies. The website is also easy to navigate and has a modern look.
   <p><a href= “https://a24films.com/”>A24 Films</a>
   </body>
+  
+   <style>
+      h1
+      {
+      color: green;
+      }
+    </style>
+    
+   <h1>Cool Math Games</h1>
+    
+  </head>
+  <body>I used to go on coolmathgames a lot when I was in high school. My favorite game is Run.
+  <p><a href= “https://www.coolmathgames.com/”>Cool Math Games</a>
+</body>
+  
 
 </html>
