--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   }
 </style>
 
-<h1>evie's super cool website!!!</h1>
-<p>I'm sooooooo hungry</p>
-<img src="https://ih1.redbubble.net/image.4135127957.9036/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="Lisa Frank Bat">
-<h2>slaying coding heading two lisa frank website im so tired</h2>
-<a href="https://lisafrank.com">Lisa Frank Website</a>
+<h1>evie's super cool website</h1>
+<p>My site for BACS 200-025</p>
+
+<img src="https://www.faronics.com/assets/schools-are-being-encouraged-to-teach-coding-and-other-computer-science-_449_389702_0_14002209_300.jpg" alt="coding">
+
+<h2>Links to other pages</h2>
+<a href= “https://evmwill.github.io/amuse.html”>Amuse</a>
+<a href= “https://evmwill.github.io/inspire.html”>Inspire</a>
