--- a/amuse.html
+++ b/amuse.html
@@ -2,7 +2,17 @@
   <head>
     <meta charset="UTF-8">
     <title>Amuse</title>
-    <style>
+    
+     <style>
+      h1
+      {
+      color: green;
+      }
+    </style>
+   <h1>Amusing Websites</h1>
+    <h2>By Evie Williamson</h2>
+    
+   <style>
       h1
       {
       color: green;
