--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<html lang="en">
+  <head>
+    <meta charset="UTF-8"
+          <title>Main Site</title>
 <style>
   h1
   {
@@ -11,6 +15,6 @@
 <img src="https://www.faronics.com/assets/schools-are-being-encouraged-to-teach-coding-and-other-computer-science-_449_389702_0_14002209_300.jpg" alt="coding">
 
 <h2>Links to other pages</h2>
-<a href= "https://bacs200steven-sanchez.github.io/amuse.html">Amuse</a>
+<a href= "https://evmwill.github.io/amuse.html">Amuse</a>
 <p>
-<a href=“https://evmwill.github.io/inspire.html”>Inspire</a>
+<a href= “https://evmwill.github.io/inspire.html”>Inspire</a>
