--- a/index.html
+++ b/index.html
@@ -18,3 +18,5 @@
 <a href= "https://evmwill.github.io/amuse.html">Amuse</a>
 <p>
 <a href= “https://evmwill.github.io/inspire.html”>Inspire</a>
+  
+</html>
