--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 <h2>Links to other pages</h2>
 <a href= "https://evmwill.github.io/amuse.html">Amuse</a>
 <p>
-<a href= “https://evmwill.github.io/inspire.html”>Inspire</a>
+  <a href= "https://evmwill.github.io/inspire.html">Inspire</a>
   
 </html>
