--- a/educate.html
+++ b/educate.html
@@ -1,1 +1,18 @@
-h
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Educate</title>
+    <style>
+      h1
+      {
+      color: green;
+      }
+    </style>
+    
+   <h1>Educate</h1>
+    
+  </head>
+  <body>Ted Talks
+  <iframe src="https://www.youtube.com/watch?v=1qq7lDL-bzY" title="Why students should take mental health days"><iframe>
+          </body>
+</html>
