--- a/educate.html
+++ b/educate.html
@@ -13,6 +13,6 @@
     
   </head>
   <body>Ted Talks
-  <iframe src="https://www.ted.com/talks/sir_ken_robinson_do_schools_kill_creativity?referrer=playlist-the_most_popular_ted_talks_of_all_time&autoplay=true" title="Schools kill creativity"><iframe>
+  <iframe src="https://www.youtube.com/embed?v=nKoU182gufA" title="Schools kill creativity"><iframe>
           </body>
 </html>
