--- a/educate.html
+++ b/educate.html
@@ -12,7 +12,6 @@
    <h1>Educate</h1>
     
   </head>
-  <body>Ted Talks
-  <iframe src="https://www.youtube.com/embed?v=nKoU182gufA" title="Schools kill creativity"><iframe>
-          </body>
+  <iframe src="https://www.youtube.com/embed?v=1qq7lDL-bzY&t=25s" title="Why students should have mental health days"><iframe>
+          
 </html>
