--- a/educate.html
+++ b/educate.html
@@ -13,5 +13,5 @@
     
   </head>
   <iframe src="https://www.youtube.com/embed?v=1qq7lDL-bzY&t=25s" title="Why students should have mental health days"><iframe>
-          
+  <iframe src="https://www.youtube.com/embed?v=imCBztvKgus" title="Why you think you're ugly"><iframe>        
 </html>
