--- a/profile.html
+++ b/profile.html
@@ -1,1 +1,19 @@
-h
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Profile</title>
+    <style>
+      h1
+      {
+      color: green;
+      }
+    </style>
+    
+   <h1>Profile</h1>
+    
+  </head>
+  <h2>Special Interests</h2>
+  <p>Movies</p>
+  <p>Painting</p>
+  <p>Hiking</p>
+</html>
