--- a/profile.html
+++ b/profile.html
@@ -16,4 +16,5 @@
   <p>Movies</p>
   <p>Painting</p>
   <p>Hiking</p>
+  <p><img src="https://evmwill.github.io/Screen%20Shot%202023-02-10%20at%209.21.56%20PM.png" alt="me"></p>
 </html>
