--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
 <html lang="en">
- <table>
+ <table border="1">
    <tr>
      <th>Page Name</th>
      <th>URL</th>
@@ -7,6 +7,10 @@
    </tr>
    <tr>
      <td><a href= “https://evmwill.github.io/amuse.html”>Amuse</a></td>
+    <td><a href= “https://evmwill.github.io/amuse.html”>Amuse</a></td>
+    <td><a href= “https://evmwill.github.io/amuse.html”>Amuse</a></td>
+  </tr>
+    
   
   
   
