--- a/test.html
+++ b/test.html
@@ -6,8 +6,8 @@
      <th>Validation</th>
    </tr>
    <tr>
-     <td><a href= “https://evmwill.github.io/amuse.html”></a></td>
-    <td><a href= “https://evmwill.github.io/amuse.html”>Amuse</a></td>
+    <td>amuse</td>
+    <td><a href= “https://evmwill.github.io/amuse.html”></td>
     <td><a href= “https://evmwill.github.io/amuse.html”>Amuse</a></td>
   </tr>
     
