--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
 <a href= "https://evmwill.github.io/amuse.html">Amuse</a>
 <p>
   <a href= "https://evmwill.github.io/inspire.html">Inspire</a>
+ <p>
+  <a href= "https://evmwill.github.io/profile.html">Profile</a>
+ <p>  
+   <a href= "https://evmwill.github.io/educate.html">Educate</a>
   
 </html>
