--- a/profile.html
+++ b/profile.html
@@ -12,9 +12,13 @@
    <h1>Profile</h1>
     
   </head>
-  <h2>Special Interests</h2>
-  <p>Movies</p>
+  <h2>I'm Evie Williamson<h2>
+    <p>
+  <h3>Special Interests</h3>
+    </p>
+   <p>Film</p>
   <p>Painting</p>
+    <p>Crocheting</p>
   <p>Hiking</p>
   <p><img src="https://evmwill.github.io/Screen%20Shot%202023-02-10%20at%209.21.56%20PM.png" width="200" height="250"></p>
 </html>
