--- a/profile.html
+++ b/profile.html
@@ -21,4 +21,6 @@
     <p>Crocheting</p>
   <p>Hiking</p>
   <p><img src="https://evmwill.github.io/Screen%20Shot%202023-02-10%20at%209.21.56%20PM.png" width="200" height="250"></p>
+    
+    <p><a href= “https://evmwill.github.io/index.html”>Home</a>
 </html>
