--- a/test.html
+++ b/test.html
@@ -7,8 +7,8 @@
    </tr>
    <tr>
     <td>amuse</td>
-    <td><a href= “https://evmwill.github.io/amuse.html”>https://evmwill.github.io/amuse.html</a></td>
-    <td><a href= “https://evmwill.github.io/amuse.html”>Amuse</a></td>
+    <td><a href= “https://evmwill.github.io/index.html”</a></td>
+    <td><a href= “https://validator.w3.org/”>Test</a></td>
   </tr>
     
   
