--- a/test.html
+++ b/test.html
@@ -6,9 +6,9 @@
      <th>Validation</th>
    </tr>
    <tr>
-    <td>amuse</td>
-    <td><a href= “https://evmwill.github.io/index.html”</a></td>
-    <td><a href= “https://validator.w3.org/”>Test</a></td>
+    <td>Index</td>
+    <td> <a href="https://evmwill.github.io/index.html">https://evmwill.github.io/index.html</a> </td>
+    <td> <a href="https://validator.w3.org/">Test</a> </td>
   </tr>
     
   
