--- a/profile.html
+++ b/profile.html
@@ -22,5 +22,5 @@
   <p>Hiking</p>
   <p><img src="https://evmwill.github.io/Screen%20Shot%202023-02-10%20at%209.21.56%20PM.png" width="250" height="250"></p>
     
-    <p><a href= “https://evmwill.github.io/index.html”>Home</a>
+ <a href="https://evmwill.github.io/index.html">Home</a>
 </html>
