--- a/educate.html
+++ b/educate.html
@@ -15,5 +15,5 @@
   <iframe src="https://www.youtube.com/embed?v=1qq7lDL-bzY&t=25s" title="Why students should have mental health days"><iframe>
   <iframe src="https://www.youtube.com/embed?v=imCBztvKgus" title="Why you think you're ugly"><iframe>   
     
-    <p><a href= “https://evmwill.github.io/index.html”>Home</a></p>
+  <a href="https://evmwill.github.io/index.html">Home</a>
 </html>
