--- a/amuse.html
+++ b/amuse.html
@@ -54,7 +54,7 @@
   <p><a href= “https://clickhole.com/”>ClickHole</a>
 </body>
 
-<p><a href= “https://evmwill.github.io/index.html”>Home</a></p>
+<a href="https://evmwill.github.io/index.html">Home</a>
 
 
 </html>
