--- a/test.html
+++ b/test.html
@@ -11,6 +11,23 @@
     <td> <a href="https://validator.w3.org/">Test</a> </td>
   </tr>
     
+  <tr>
+     <td>Amuse</td>
+    <td> <a href="https://evmwill.github.io/amuse.html">https://evmwill.github.io/amuse.html</a> </td>
+    <td> <a href="https://validator.w3.org/">Test</a> </td>
+  </tr>
+  
+  <tr>
+     <td>Educate</td>
+    <td> <a href="https://evmwill.github.io/educate.html">https://evmwill.github.io/educate.html</a> </td>
+    <td> <a href="https://validator.w3.org/">Test</a> </td>
+  </tr>
+  
+    <tr>
+     <td>Profile</td>
+    <td> <a href="https://evmwill.github.io/profile.html">https://evmwill.github.io/profile.html</a> </td>
+    <td> <a href="https://validator.w3.org/">Test</a> </td>
+  </tr>
   
   
   
