--- a/test.html
+++ b/test.html
@@ -1,4 +1,7 @@
 <html lang="en">
+ 
+ <title>Test</title>
+ 
  <table border="1">
    <tr>
      <th>Page Name</th>
@@ -26,6 +29,12 @@
     <tr>
      <td>Profile</td>
     <td> <a href="https://evmwill.github.io/profile.html">https://evmwill.github.io/profile.html</a> </td>
+    <td> <a href="https://validator.w3.org/">Test</a> </td>
+  </tr>
+  
+      <tr>
+     <td>Template</td>
+    <td> <a href="https://evmwill.github.io/template.html">https://evmwill.github.io/template.html</a> </td>
     <td> <a href="https://validator.w3.org/">Test</a> </td>
   </tr>
   
