--- a/test.html
+++ b/test.html
@@ -1,7 +1,16 @@
 <html lang="en">
- 
- <title>Test</title>
- 
+  <head>
+    <meta charset="UTF-8">
+    <title>Test</title>
+    <style>
+      h1
+      {
+      color: green;
+      }
+    </style>
+   
+   <h1>Test</h1>
+   
  <table border="1">
    <tr>
      <th>Page Name</th>
