--- a/inspire.html
+++ b/inspire.html
@@ -1,17 +1,23 @@
+<!DOCTYPE html>
 <html>
   
-  <head>
+ 
+<head>
     <title>Inspire Me</title>
-  </head>
+    <style>
+        #homebutton
+        {
+            height: 30px;
+            clear: left;
+        }
+        img
+        {
+            float: left;
+        }
+    </style>
+</head>
   
-<style>
-  h1
-  {
-    color: green;
-  }
-  </style>
-  
-  
+ 
     <h1>Natalie Portman</h1>
     <img src="http://images4.fanpop.com/image/photos/16700000/The-Hollywood-Reporter-November-2010-natalie-portman-16704737-349-466.jpg" alt="Natalie Portman picture">
     <body><p>Natalie Portman is an American actress who has an inspiring career and life. She appeared in her first film, <em>Leon: The Professional</em>, at age 12 and has since appeared in 52 films.
@@ -20,5 +26,7 @@
     She has also founded a women's soccer team, Angel City Football Club, once she noticed that women's soccer was undervalued. She is one of the most prolific actresses of our time.</p></body>
     
 <a href="https://evmwill.github.io/index.html">Home</a>
+   <p><a href="https://evmwill.github.io/index.html"><img id="homebutton" src="images/button.png" alt="homepage button"></a></p>
 </html>
+
 
