--- a/inspire.html
+++ b/inspire.html
@@ -26,7 +26,7 @@
     She has also founded a women's soccer team, Angel City Football Club, once she noticed that women's soccer was undervalued. She is one of the most prolific actresses of our time.</p></body>
     
 <a href="https://evmwill.github.io/index.html">Home</a>
-   <p><a href="https://evmwill.github.io/index.html"><img id="homebutton" src="images/button.png" alt="homepage button"></a></p>
+   <p><a href="https://evmwill.github.io/index.html"><img id="homebutton" src="https://evmwill.github.io/images/button.png" alt="homepage button"></a></p>
 </html>
 
 
