--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8"
-          <title>Main Site</title>
+          
+<title>Main Site</title>
   
 <style>
   h1
