--- a/superhero.html
+++ b/superhero.html
@@ -45,13 +45,13 @@
                 <tr>
                     <th>Batman</th>
                     <td>Bruce&nbsp;Wayne</td>
-                    <td><a href="images/batmanprofile.jpg"><img class="heropic" src="images/batmanprofile.jpg" alt="Batman Pic"></a></td>
-                    <td>N/A</td>
+                    <td><a href="images/batmanprofile.webp"><img class="heropic" src="images/batmanprofile.webp" alt="Batman Pic"></a></td>
+                    <td>Rich</td>
                     <td>
                         <ul>
-                            <li>Human/Vulnerable</li>
-                            <li>Childhood Trauma</li>
-                            <li>Won't Kill</li>
+                            <li>Human</li>
+                            <li>Wears too much eyeliner</li>
+                            <li>Has never had a real job</li>
                         </ul>
                     </td>
                 </tr>
