--- a/superhero.html
+++ b/superhero.html
@@ -45,7 +45,7 @@
                 <tr>
                     <th>Batman</th>
                     <td>Bruce&nbsp;Wayne</td>
-                    <td><a href="images/batmanprofile.webp"><img class="heropic" src="images/batmanprofile.webp" alt="Batman Pic"></a></td>
+                    <td><a href="images/batmanprofile.webp"><img class="heropic" src="images/batmanprofile.webp" alt="Batman Pic" width="300" Height="300"></a></td>
                     <td>Rich</td>
                     <td>
                         <ul>
