--- a/superhero.html
+++ b/superhero.html
@@ -58,7 +58,7 @@
                 <tr>
                     <th>Superman</th>
                     <td>Clark&nbsp;Kent</td>
-                    <td><a href="https://static.wikia.nocookie.net/batman/images/a/ac/Catwoman_%28The_Batman_film%29.jpg/revision/latest?cb=20220730221439"><img class="heropic" src="https://static.wikia.nocookie.net/batman/images/a/ac/Catwoman_%28The_Batman_film%29.jpg/revision/latest?cb=20220730221439" alt="Catwoman Pic"></a></td>
+                    <td><a href="images/catwomanprofile.webp"><img class="heropic" src="images/catwomanprofile.webp" alt="Catwoman Pic"></a></td>
                     <td>
                         <ul>
                             <li>Invulnerable</li>
