--- a/superhero.html
+++ b/superhero.html
@@ -57,20 +57,19 @@
                     </td>
                 </tr>
                 <tr>
-                    <th>Superman</th>
+                    <th>Catwoman</th>
                     <td>Clark&nbsp;Kent</td>
                     <td><a href="images/catwomanprofile.webp"><img class="heropic" src="images/catwomanprofile.webp" alt="Catwoman Pic"></a></td>
                     <td>
                         <ul>
-                            <li>Invulnerable</li>
-                            <li>Flight</li>
-                            <li>Super Strong</li>
-                            <li>X-Ray Vision</li>
-                            <li>Laser Eyes</li>
+                            <li>Agile</li>
+                            <li>Smart</li>
+                            <li>Motorcycle</li>
                         </ul>
                     </td>
                     <td>
-                        Kryptonite
+                        <li>Impulsive</li>
+                        <li>Too many cats to take care of</li>
                     </td>
                 </tr>
             </tbody>
