--- a/superhero.html
+++ b/superhero.html
@@ -58,8 +58,8 @@
                 </tr>
                 <tr>
                     <th>Catwoman</th>
-                    <td>Clark&nbsp;Kent</td>
-                    <td><a href="images/catwomanprofile.webp"><img class="heropic" src="images/catwomanprofile.webp" alt="Catwoman Pic"></a></td>
+                    <td>Selena&nbsp;Kyle</td>
+                    <td><a href="images/catwomanprofile.webp"><img class="heropic" src="images/catwomanprofile.webp" alt="Catwoman Pic" Width="300" Height="300"></a></td>
                     <td>
                         <ul>
                             <li>Agile</li>
