--- a/superhero.html
+++ b/superhero.html
@@ -72,6 +72,22 @@
                         <li>Too many cats to take care of</li>
                     </td>
                 </tr>
+                         <tr>
+                    <th>Spiderman</th>
+                    <td>Peter&nbsp;Parker</td>
+                    <td><a href="images/spidermanprofile.webp"><img class="heropic" src="images/spidermanprofile.webp" alt="Spiderman Pic" Width="300" Height="300"></a></td>
+                    <td>
+                        <ul>
+                            <li>Agile</li>
+                            <li>Smart</li>
+                            <li>Super Strength</li>
+                            <li>Spider Abilities</li>
+                        </ul>
+                    </td>
+                    <td>
+                        <li>Annoying</li>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </body>
