--- a/superhero.html
+++ b/superhero.html
@@ -91,7 +91,7 @@
                                         <tr>
                     <th>Iron Man</th>
                     <td>Tony&nbsp;Stark</td>
-                    <td><a href="images/ironmanprofile.webp"><img class="heropic" src="images/ironmanprofile.webp" alt="Iron Man Pic" Width="300" Height="300"></a></td>
+                    <td><a href="images/ironmanprofile.jpeg"><img class="heropic" src="images/ironmanprofile.jpeg" alt="Iron Man Pic" Width="300" Height="300"></a></td>
                     <td>
                         <ul>
                             <li>Smart</li>
