--- a/superhero.html
+++ b/superhero.html
@@ -23,7 +23,7 @@
             }
             th
             {
-                background-color: gray;
+                background-color: green;
                 font-size: 18px;
             }
         </style>
