--- a/superhero.html
+++ b/superhero.html
@@ -26,6 +26,11 @@
                 background-color: green;
                 font-size: 18px;
             }
+
+background-image: url("images/fire.jpeg");
+          
+
+
         </style>
 -->
     </head>
