--- a/superhero.html
+++ b/superhero.html
@@ -27,7 +27,9 @@
                 font-size: 18px;
             }
 
-background-image: url("images/fire.jpeg");
+        body  {
+        background-image: url("images/fire.jpeg");
+        }
           
 
 
