--- a/superhero.html
+++ b/superhero.html
@@ -23,17 +23,13 @@
             }
             th
             {
-                background-color: green;
                 font-size: 18px;
 
             }
-
-        body {
-        background-image: url("images/fire.jpeg");
-
-        }
-          
-
+body  {
+  background-image: url("images/fire.jpeg");
+  background-color: #cccccc;
+}
 
         </style>
 -->
