--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
         <title>Google Super Search</title>
         <link rel="stylesheet" href="css/main.css">
     </head>
-    <body>
+   <body bgcolor=”#800000">
         <h1>Google Super Search</h1>
         <form action="https://www.google.com/search" method="GET" target="_blank">
             <fieldset id="toplevelset">
