--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
         <title>Google Super Search</title>
         <link rel="stylesheet" href="css/main.css">
     </head>
-   <body bgcolor=”#808000"><script async defer src="https://buttons.github.io/buttons.js"></script>
+   <body bgcolor=”#808000">
         <h1>Google Super Search</h1>
         <form action="https://www.google.com/search" method="GET" target="_blank">
             <fieldset id="toplevelset">
@@ -27,7 +27,6 @@
                 <fieldset>
                     <div>
                         <input type="checkbox" name="newwindow" value="1" id="checkwindow">
-<a class="github-button" href="https://github.com/buttons/github-buttons" data-color-scheme="no-preference: dark_dimmed; light: light; dark: dark_high_contrast;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star buttons/github-buttons on GitHub">Star</a>
                         <label for="checkwindow">Open Links in New Window</label>
                     </div>
                 </fieldset>
