--- a/resume/index.html
+++ b/resume/index.html
@@ -8,7 +8,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Resume</title>
     </head>
-    <body>
+    <style>
+body {
+  background-image: radial-gradient(red, green, blue); 
+}  
+    </style>
         <nav>
             <h1>Evelyn Williamson</h1>
 
