--- a/resume/index.html
+++ b/resume/index.html
@@ -27,7 +27,7 @@ body {
         </nav>
         <section id="contactinfo">
             <h2>Contact Info</h2>
-            <img src="images/sanchez-steven.png">
+            <img src="images/Screen Shot 2023-02-10 at 9.21.56 PM.png">
             <ul>
                 <li>Phone: 000-000-0000</li>
                 <li>Email: will6458@bears.unco.edu</li>
