--- a/search.html
+++ b/search.html
@@ -28,6 +28,9 @@
                     <div>
                         <input type="checkbox" name="newwindow" value="1" id="checkwindow">
                         <label for="checkwindow">Open Links in New Window</label>
+                                                
+                                        <label for="images">Pictures Only</label>
+                <input type="checkbox" id="images" name="tbm" value="isch">
                     </div>
                 </fieldset>
             </fieldset>
