--- a/search.html
+++ b/search.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Google Super Search</title>
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="evmwill.github.io/resume/css/style.css">
     </head>
    <body bgcolor=”#808000">
         <h1>Google Super Search</h1>
