--- a/search.html
+++ b/search.html
@@ -6,9 +6,12 @@
         <meta charset="UTF-8">
         <title>Super Search</title>
 		<style>
-			input, select{
-				background-color: lightgray;
-			}
+			#grad1 {
+  height: 200px;
+  background-color: #cccccc;
+  background-image: linear-gradient(white, green);
+}
+
 		</style>
     </head>
     <body>
