--- a/search.html
+++ b/search.html
@@ -6,15 +6,13 @@
         <meta charset="UTF-8">
         <title>Super Search</title>
 		<style>
-			#grad1 {
-  height: 200px;
-  background-color: #cccccc;
-  background-image: linear-gradient(white, green);
-}
 
 		</style>
     </head>
     <body>
+	    body {
+  background-image: url("https://d9-wret.s3.us-west-2.amazonaws.com/assets/palladium/production/s3fs-public/styles/search_result/public/thumbnails/image/water-1057484.jpg?itok=CS6Qu0-0");
+}
         <h1>Google Super Search</h1>
         <form action="https://www.google.com/search">
             <fieldset>
