--- a/search.html
+++ b/search.html
@@ -2,13 +2,18 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="css/main.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/style.css">
         <meta charset="UTF-8">
-        <title>Super Search</title>
-		<style>
-
-		</style>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Resume</title>
     </head>
+    <style>
+body {
+  background-image: radial-gradient(red, green, blue); 
+}  
+    </style>
+
     <body>
         <h1>Google Super Search</h1>
         <form action="https://www.google.com/search">
