--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="resume/css/style.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Resume</title>
+        <title>Search</title>
     </head>
     <style>
 body {
@@ -32,12 +32,15 @@ body {
                         <option value=""></option>
                         <option value="jpg">Compressed</option>
                         <option value="png">Uncompressed</option>
-                        <option value="gif">Animations (maybe)</option>
+                        <option value="gif">PDF</option>
                     </select>
                 </p>
             </fieldset>
             <div>
-                <input type="submit" value="SEARCH">
+                div {
+                color: #FF8882;
+                }
+                <input type="submit" value="SEARCH" >
             </div>
         </form>
     </body>
