--- a/search.html
+++ b/search.html
@@ -37,10 +37,8 @@ body {
                 </p>
             </fieldset>
             <div>
-                div {
-                color: #FF8882;
-                }
                 <input type="submit" value="SEARCH" >
+             { background-color: rgb(255, 122, 89); } 
             </div>
         </form>
     </body>
