--- a/search.html
+++ b/search.html
@@ -23,7 +23,16 @@ body {
 
                 <label for="site">Site: </label>
                 <input type="text" id="site" name="as_sitesearch" placeholder="Enter the site you wish to search" size="75">
-
+                                <div>
+                    <label for="site">Select a Site</label>
+                    <select name="as_sitesearch" id="site">
+                        <option value="">--All Websites--</option>
+                        <option value="unco.edu">University of Northern Colorado</option>
+                        <option value="instructure.com">Canvas</option>
+                        <option value="w3schools.com">W3Schools</option>
+                        <option value="html.spec.whatwg.org">HTML Living Standard</option>
+                    </select>
+                </div>
                 <label for="images">Images Only</label>
                 <input type="checkbox" id="images" name="tbm" value="isch">
 
