--- a/search.html
+++ b/search.html
@@ -25,7 +25,7 @@ body {
                 <input type="text" id="site" name="as_sitesearch" placeholder="Enter the site you wish to search" size="75">
                                 <div>
                     <label for="site">Select a Site</label>
-                    <select name="as_sitesearch" id="site">
+                                    <p>  <select name="as_sitesearch" id="site"> </p>
                         <option value="">--All Websites--</option>
                         <option value="unco.edu">University of Northern Colorado</option>
                         <option value="instructure.com">Canvas</option>
