--- a/search.html
+++ b/search.html
@@ -41,7 +41,7 @@ body {
                         <option value=""></option>
                         <option value="jpg">Compressed</option>
                         <option value="png">Uncompressed</option>
-                        <option value="gif">PDF</option>
+                        <option value="gif">GIF</option>
                     </select>
                 </p>
             </fieldset>
