--- a/superhero.html
+++ b/superhero.html
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
+                <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Superheroes</title>
         <link rel="stylesheet" href="css/superhero.css">
 <!--
