--- a/resume/index.html
+++ b/resume/index.html
@@ -27,7 +27,7 @@ body {
         </nav>
         <section id="contactinfo">
             <h2>Contact Info</h2>
-            <img src="https://www.telegraph.co.uk/multimedia/archive/01965/computer_1965636c.jpg" alt=”deskguy”>
+            <img src="https://www.telegraph.co.uk/multimedia/archive/01965/computer_1965636c.jpg" alt=”deskguy” style="width:2em; height:3em;">
             <ul>
                 <li>Phone: 000-000-0000</li>
                 <li>Email: will6458@bears.unco.edu</li>
