--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,7 @@
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+            <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Profile</title>
     <style>
       h1
