--- a/inspire.html
+++ b/inspire.html
@@ -20,7 +20,9 @@
   
  
     <h1>Natalie Portman</h1>
-    <img src="http://images4.fanpop.com/image/photos/16700000/The-Hollywood-Reporter-November-2010-natalie-portman-16704737-349-466.jpg" alt="Natalie Portman picture">
+    <img src="http://images4.fanpop.com/image/photos/16700000/The-Hollywood-Reporter-November-2010-natalie-portman-16704737-349-466.jpg" alt="Natalie Portman picture"
+         width= "200"
+         height= "200">
     <body><p>Natalie Portman is an American actress who has an inspiring career and life. She appeared in her first film, <em>Leon: The Professional</em>, at age 12 and has since appeared in 52 films.
       She is best known for her role in <em>Black Swan</em>. In preparation for <em> Black Swan</em>,she trained as a ballet dancer for one year and paid for the training out of her own pocket. She won an Academy Award for Best Actress due to her impressive work and commitment to the film.
     Natalie Portman has also attended Harvard University and has graduated with a bachelor's degree in psychology. She has two children, and is very active in the women's rights movement.
