--- a/superhero.html
+++ b/superhero.html
@@ -38,7 +38,7 @@ body  {
     <body>
         <h1>My Superheroes</h1>
         
-        <a href="https://evmwill.github.io/index.html">Batman</a>
+        <a href="https://https://evmwill.github.io/batman.html">Batman</a>
         
         <table>
             <thead>
@@ -50,20 +50,7 @@ body  {
                     <th>Weaknesses</th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <th>Batman</th>
-                    <td>Bruce&nbsp;Wayne</td>
-                    <td><a href="images/batmanprofile.webp"><img class="heropic" src="images/batmanprofile.webp" alt="Batman Pic" width="300" Height="300"></a></td>
-                    <td>Rich</td>
-                    <td>
-                        <ul>
-                            <li>Human</li>
-                            <li>Wears too much eyeliner</li>
-                            <li>Has never had a real job</li>
-                        </ul>
-                    </td>
-                </tr>
+
                 <tr>
                     <th>Catwoman</th>
                     <td>Selena&nbsp;Kyle</td>
