--- a/catwoman.html
+++ b/catwoman.html
@@ -1,4 +1,51 @@
+ <!DOCTYPE html>
+<html lang="en">
+    <head>
+                <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Superheroes</title>
+        <link rel="stylesheet" href="css/superhero.css">
+<!--
+        <style>
+            .heropic
+            {
+                height: 100px;
+            }
+            td, th
+            {
+                border: 2px solid black;
+                padding: 15px;
+                
+            }
+            table
+            {
+                border-spacing: 0px;
+            }
+            th
+            {
+                font-size: 18px;
+            }
+body  {
+  background-image: url("images/fire.jpeg");
+  background-color: #cccccc;
+}
+        </style>
+-->
+    </head>
+    <body>
+        <h1>Catwoman</h1>
+        <table>
+            <thead>
                 <tr>
+                    <th>Name</th>
+                    <th>Alias</th>
+                    <th>Image</th>
+                    <th>Superpowers</th>
+                    <th>Weaknesses</th>
+                </tr>
+            </thead>
+            <tbody>
+<tr>
                     <th>Catwoman</th>
                     <td>Selena&nbsp;Kyle</td>
                     <td><a href="images/catwomanprofile.webp"><img class="heropic" src="images/catwomanprofile.webp" alt="Catwoman Pic" Width="300" Height="300"></a></td>
