--- a/superhero.html
+++ b/superhero.html
@@ -39,7 +39,7 @@ body  {
         <h1>My Superheroes</h1>
         
         <a href="https://https://evmwill.github.io/batman.html">Batman</a>
-        
+        <a href="https://https://evmwill.github.io/catwoman.html">Catwoman</a>
         <table>
             <thead>
                 <tr>
@@ -51,22 +51,7 @@ body  {
                 </tr>
             </thead>
 
-                <tr>
-                    <th>Catwoman</th>
-                    <td>Selena&nbsp;Kyle</td>
-                    <td><a href="images/catwomanprofile.webp"><img class="heropic" src="images/catwomanprofile.webp" alt="Catwoman Pic" Width="300" Height="300"></a></td>
-                    <td>
-                        <ul>
-                            <li>Agile</li>
-                            <li>Smart</li>
-                            <li>Motorcycle</li>
-                        </ul>
-                    </td>
-                    <td>
-                        <li>Impulsive</li>
-                        <li>Too many cats to take care of</li>
-                    </td>
-                </tr>
+
                          <tr>
                     <th>Spiderman</th>
                     <td>Peter&nbsp;Parker</td>
