--- a/catwoman.html
+++ b/catwoman.html
@@ -61,3 +61,7 @@ body  {
                         <li>Too many cats to take care of</li>
                     </td>
                 </tr>
+            </tbody>
+        </table>
+    </body>
+</html>
