--- a/batman.html
+++ b/batman.html
@@ -26,7 +26,7 @@
                 font-size: 18px;
             }
 body  {
-  background-image: url("images/fire.jpeg");
+  background-image: url('images/fire.jpeg');
 }
         </style>
 -->
