--- a/resume/index.html
+++ b/resume/index.html
@@ -9,6 +9,7 @@
         <title>Resume</title>
     </head>
         <nav>
+            <body>
             <h1>Evelyn Williamson</h1>
 
             <div class="container-fluid">
