--- a/wizard/wizard101.html
+++ b/wizard/wizard101.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-        <link rel="stylesheet" href="wizard/style.css">
+        <link rel="stylesheet" href="wizard/style.wizard">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Resume</title>
+        <title>Wizard 101</title>
     </head>
         <nav>
             <body>
-            <h1>Evelyn Williamson</h1>
+            <h1>Why You Should Download Wizard 101</h1>
