--- a/wizard/wizard101.html
+++ b/wizard/wizard101.html
@@ -1,13 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/main.css">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Wizard 101</title>
-    </head>
-        <nav>
-            <body>
-            <h1>Why You Should Download Wizard 101</h1>
-            </body>
+    <p style="background-image: url('https://preview.redd.it/the-commons-without-the-two-unused-houses-in-the-middle-v0-251wg5o9acu91.png?width=640&crop=smart&auto=webp&s=32fffedbe42aa9f2cf296cfc2bbae592b094392e');">
+
+    <h1>Why You Should Download Wizard101</h2>
