--- a/wizard/wizard101.html
+++ b/wizard/wizard101.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-    <p style="background-image: url('https://preview.redd.it/the-commons-without-the-two-unused-houses-in-the-middle-v0-251wg5o9acu91.png?width=640&crop=smart&auto=webp&s=32fffedbe42aa9f2cf296cfc2bbae592b094392e');">
+    <p style="background-image: url('evmwill.github.io/wizard/wizbackground.png');">
 
     <h1>Why You Should Download Wizard101</h2>
