--- a/wizard/wizard101isawesome.html
+++ b/wizard/wizard101isawesome.html
@@ -13,10 +13,10 @@
 
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-2 border border-primary"><a href=index.html#contactinfo>Contact Info</a></div>
-                    <div class="col-lg-2 border border-primary"><a href=index.html#education>Education</a></div>
-                    <div class="col-lg-2 border border-primary"><a href=index.html#experience>Experience</a></div>
-                    <div class="col-lg-6 border border-primary"><a href=index.html#skills>Skills</a></div>
+                    <div class="col-lg-2 border border-primary"><a href=wizard101isawesome.html#pricing>Pricing</a></div>
+                    <div class="col-lg-2 border border-primary"><a href=wizard101isawesome.html#worlds>Worlds</a></div>
+                    <div class="col-lg-2 border border-primary"><a href=wizard101isawesome.html#spells>Spells</a></div>
+                    <div class="col-lg-6 border border-primary"><a href=wizard101isawesome.html#schools>Schools</a></div>
                 </div>
             </div>
         </nav>
