--- a/wizard/wizard101isawesome.html
+++ b/wizard/wizard101isawesome.html
@@ -1,5 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+    :root
+
+body {
+    background-image: linear-gradient(to bottom right, #5F9EA0, #006400);
+}  
+*
+{
+    color: #c2a5a5;
+    text-align: center;
+}
+h1
+{
+    text-align: center;
+    font-size: calc(12pt + 4vw);
+}
+nav
+{
+    border: 3px #c2a5a5 solid;
+}
+section
+{
+    border: 3px #c2a5a5 solid;
+    margin: 5px;
+}
+.date
+{
+    color: #239B5F;
+}
+li
+{
+    display: block;
+}
+img {
+  border: 5px solid #555;
+}
+    
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <link rel="stylesheet" href="wizard/wizstyle.css">
