--- a/wizard/wizard101isawesome.html
+++ b/wizard/wizard101isawesome.html
@@ -46,7 +46,7 @@ img {
     </head>
         <nav>
             <body>
-            <h1>Why You Should Download Wizard101</h1>
+            <h1>Why You Should Download Wizard101 njkgfjhsf</h1>
 
             <div class="container-fluid">
                 <div class="row">
