--- a/wizard/wizard101isawesome.html
+++ b/wizard/wizard101isawesome.html
@@ -12,7 +12,7 @@
     </head>
         <nav>
             <body>
-            <h1>Why You Should Download Wizard101 help me</h1>
+            <h1>Why You Should Download Wizard101</h1>
 
             <div class="container-fluid">
                 <div class="row">
