--- a/wizard/wizard101isawesome.html
+++ b/wizard/wizard101isawesome.html
@@ -23,9 +23,11 @@
                 </div>
             </div>
         </nav>
-        <section id="contactinfo">
-            <h2>Contact Info</h2>
-            <img src="https://www.telegraph.co.uk/multimedia/archive/01965/computer_1965636c.jpg" alt=”deskguy” style="width:10em; height:8em;">
+              <img src="http://images4.fanpop.com/image/photos/16700000/The-Hollywood-Reporter-November-2010-natalie-portman-16704737-349-466.jpg" alt="Natalie Portman picture"
+         width= "150"
+         height= "150">
+        <section id="Info">
+            <h2>Info</h2>
             <ul>
                 <li>Phone: 000-000-0000</li>
                 <li>Email: will6458@bears.unco.edu</li>
