--- a/wizard/wizard101isawesome.html
+++ b/wizard/wizard101isawesome.html
@@ -2,7 +2,7 @@
 <html lang="en">
       <style>
          body {
-            background-image: url("/videotutorials/images/tutor_connect_home.jpg");
+            background-image: url("images/batmanprofile.webp");
          }
       </style>
     
