--- a/wizard/wizard101isawesome.html
+++ b/wizard/wizard101isawesome.html
@@ -16,7 +16,7 @@
     </head>
         <nav>
             <body>
-            <h1>Why You Should Download Wizard101 no</h1>
+            <h1>Why You Should Download Wizard101</h1>
 
             <div class="container-fluid">
                 <div class="row">
