--- a/wizard/wizard101isawesome.html
+++ b/wizard/wizard101isawesome.html
@@ -27,14 +27,14 @@
                 </div>
             </div>
         </nav>
-              <img src="http://images4.fanpop.com/image/photos/16700000/The-Hollywood-Reporter-November-2010-natalie-portman-16704737-349-466.jpg" alt="Natalie Portman picture"
-         width= "150"
-         height= "150">
+              <img src="https://kingsisletest.files.wordpress.com/2018/09/wizard.jpg" alt="Wizard 101"
+         width= "300"
+         height= "300">
         <section id="Info">
             <h2>Info</h2>
             <ul>
-                <li>Phone: 000-000-0000</li>
-                <li>Email: will6458@bears.unco.edu</li>
+                <li>Wizard101 is a safe kids game that provides entertainment and magical, interactive fun. Choose from 7 schools of magic & explore 16 fantastic worlds of the Spiral. Fight Monsters. Collect Cool Pets. Create Your Castle. Fun for All Ages. Explore Magical Worlds. Learn Spells.</li>
+
             </ul>
             
         </section>
