--- a/wizard/wizard101isawesome.html
+++ b/wizard/wizard101isawesome.html
@@ -42,18 +42,9 @@
             <h2>Education</h2>
             <ul>
                 <li>
-                    <h3>University of Northern Colorado <span class="date">(May 2024)</span></h3>
-                    <ul>
-                        <li>Major: Marketinggg</li>
-                        <li>Minor: Digital Marketing</li>
+<p><a href="https://www.wizard101.com/create_wizard/?utm_medium=cpc&utm_source=google&utm_campaign=US_SRCH_Brand&utm_content=623461906013&utm_term=wizard%20101&gclid=Cj0KCQjw0tKiBhC6ARIsAAOXutl_jOHal1NzONLPWFWkJ_vpAEIbKvBYwOr9S6CqTrZ7noVqTqzFzSAaAmZtEALw_wcB"><img src="images/button.png" alt="Wizard101 Site"></a></p>
                     </ul>
                 </li>
-            </ul>
-        </section>
-        <section id="experience">
-            <h2>Experience</h2>
-            <ul>
-                <li>internships and barista and cashier</span></li>
             </ul>
         </section>
     </body>
