--- a/wizard/wizard101isawesome.html
+++ b/wizard/wizard101isawesome.html
@@ -43,7 +43,9 @@
             <ul>
                 <li>
 <p><a href="https://www.wizard101.com/create_wizard/?utm_medium=cpc&utm_source=google&utm_campaign=US_SRCH_Brand&utm_content=623461906013&utm_term=wizard%20101&gclid=Cj0KCQjw0tKiBhC6ARIsAAOXutl_jOHal1NzONLPWFWkJ_vpAEIbKvBYwOr9S6CqTrZ7noVqTqzFzSAaAmZtEALw_wcB"><img src="images/button.png" alt="Wizard101 Site"></a></p>
-                    </ul>
+                   <img src="https://kingsisletest.files.wordpress.com/2018/09/wizard.jpg" alt="Wizard 101"
+              </ul>
+             
                 </li>
             </ul>
         </section>
