--- a/wizard/wizard101isawesome.html
+++ b/wizard/wizard101isawesome.html
@@ -20,7 +20,7 @@
 
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-2 border border-primary"><a href=wizard101isawesome.html#pricing>Pricing</a></div>
+                    <div class="col-lg-2 border border-primary">Pricing</a></div>
                     <div class="col-lg-2 border border-primary"><a href=wizard101isawesome.html#worlds>Worlds</a></div>
                     <div class="col-lg-2 border border-primary"><a href=wizard101isawesome.html#spells>Spells</a></div>
                     <div class="col-lg-6 border border-primary"><a href=wizard101isawesome.html#schools>Schools</a></div>
