--- a/wizard/wizard101isawesome.html
+++ b/wizard/wizard101isawesome.html
@@ -43,6 +43,16 @@
             <ul>
                 <li>
 <p><a href="https://www.wizard101.com/create_wizard/?utm_medium=cpc&utm_source=google&utm_campaign=US_SRCH_Brand&utm_content=623461906013&utm_term=wizard%20101&gclid=Cj0KCQjw0tKiBhC6ARIsAAOXutl_jOHal1NzONLPWFWkJ_vpAEIbKvBYwOr9S6CqTrZ7noVqTqzFzSAaAmZtEALw_wcB"><img src="images/button.png" alt="Wizard101 Site"></a></p>
+                      <p><a href="wizard101schools.html"><img src="images/button.png" alt="Schools"></a></p>
+                   <img src="https://wallpapercave.com/wp/9EXOOKc.png" alt="Wizard 103"
+              </ul>
+             
+                </li>
+            </ul>
+        </section>
+    </body>
+</html>
+
                    <img src="https://wallpapercave.com/wp/9EXOOKc.png" alt="Wizard 103"
               </ul>
              
