--- a/wizard/wizard101isawesome.html
+++ b/wizard/wizard101isawesome.html
@@ -38,8 +38,8 @@
             </ul>
             
         </section>
-        <section id="education">
-            <h2>Education</h2>
+        <section id="more info">
+            <h2>More Info</h2>
             <ul>
                 <li>
 <p><a href="https://www.wizard101.com/create_wizard/?utm_medium=cpc&utm_source=google&utm_campaign=US_SRCH_Brand&utm_content=623461906013&utm_term=wizard%20101&gclid=Cj0KCQjw0tKiBhC6ARIsAAOXutl_jOHal1NzONLPWFWkJ_vpAEIbKvBYwOr9S6CqTrZ7noVqTqzFzSAaAmZtEALw_wcB"><img src="evmwill.github.io/button.png" alt="Wizard101 Site"></a></p>
