--- a/wizard/wizard101worlds.html
+++ b/wizard/wizard101worlds.html
@@ -11,19 +11,15 @@
         <nav>
             <body>
            
-           <img src="https://static.wikia.nocookie.net/wizard101/images/d/d5/Wizard_City.jpg/revision/latest?cb=20100905125600" alt="Wizard City"
-         width= "400"
-         height= "400">
+      
            <img src="https://edgecast.wizard101.com/image/free/Wizard/C/Worlds/Krokotopia-World-Map.jpg?v=0" alt="Krokotopia"
          width= "400"
          height= "400">
-              <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.wizard101.com%2Fgame%2Fworlds%2Fdragonspyre&psig=AOvVaw1ckbkAlIOiLjLNrYqYFnKq&ust=1683411534668000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCJCBuOia3_4CFQAAAAAdAAAAABA6" alt="Dragonspyre"
-         width= "400"
-         height= "400">
+
         <section id="Info">
             <h2>Schools</h2>
             <ul>
-                <li> There are many worlds you can go to on Wizard101! As you increase in levels, more worlds will open to you. There are sixteen worlds available to explore.
+                <li> There are many worlds you can go to on Wizard101! As you increase in levels, more worlds will open to you. There are sixteen worlds available to explore. Click the link below to learn more!
 
 </li>
 
