--- a/wizard/wizard101worlds.html
+++ b/wizard/wizard101worlds.html
@@ -22,6 +22,6 @@
                 <li> There are many worlds you can go to on Wizard101! As you increase in levels, more worlds will open to you. There are sixteen worlds available to explore. Click the link below to learn more!
 
 </li>
- <p><a href="https://www.wizard101.com/game/worlds/wizardcity">  alt="Explore Worlds"></a></p>
+                <p><a href="https://www.wizard101.com/game/worlds/wizardcity">Explore Worlds</a></p>
             </ul>
             </body>
